[tool.poetry]
name = "slapps"
version = "0.1.0"
description = "Streamlit for Data Science"
authors = ["Jonathan Búcaro <hola@jonathanbucaro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
